--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,38 @@ h4 {
     max-width: 800px;
 }
 
+.negrita {
+    font-weight: 700;
+}
+
+.whatsapp-button {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 1000;
+    /* Asegura que el botón esté por encima de otros elementos */
+}
+
+.whatsapp-button img {
+    width: 60px;
+    /* Ajusta el tamaño de la imagen según lo desees */
+    height: 60px;
+    border-radius: 50%;
+    /* Hace la imagen circular */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    /* Añade una sombra para darle un efecto de flotado */
+}
+
+.whatsapp-button a {
+    display: inline-block;
+}
+
+.whatsapp-button img:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
 
 /** Botones **/
 .boton {
@@ -112,14 +144,32 @@ h4 {
 }
 
 .site-header.inicio {
-    background-image: url(../img/header.jpg);
+    position: relative; /* Necesario para posicionar correctamente el pseudo-elemento */
+    background-image: url(../img/CAMION4.webp);
     background-position: center center;
     background-size: cover;
     height: 100vh;
     min-height: 60rem;
+    overflow: hidden; 
+}
+
+.site-header::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: inherit; /* Reutiliza la misma imagen */
+    background-position: inherit;
+    background-size: inherit;
+    filter: brightness(0.6) blur(4px); /* Aplica el desenfoque aquí */
+    z-index: 0; /* Asegúrate de que esté detrás del contenido */
 }
 
 .contenido-header {
+    position: relative; /* Asegura que el texto esté por encima del fondo */
+    z-index: 1; /* Coloca el contenido encima del pseudo-elemento */
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -157,7 +207,7 @@ h4 {
 /** Navegacion **/
 .navegacion a {
     color: #ffffff;
-    text-decoration: none;
+    text-decoration:overline;
     font-size: 2.2rem;
     /* se ponene uno bajo de otro */
     display: block;
@@ -430,7 +480,7 @@ h4 {
     display: none;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 768px){ 
     .site-footer nav {
         display: block;
     }
@@ -494,10 +544,18 @@ select {
     border: none;
     border-radius: 1rem;
 }
+textarea {
+    position: relative;
+    z-index: 10; /* Asegúrate de que esté por encima de otros elementos */
+}
 
 input[type="radio"] {
     width: auto;
     margin: 0;
+}
+input {
+    position: relative;
+    z-index: 10; /* Asegúrate de que esté por encima de otros elementos */
 }
 
 select {
@@ -514,4 +572,32 @@ textarea {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.colorTitu {
+    color: #71B100 !important;
+}
+
+.icono ul {
+    padding-left: 1.5rem;
+    list-style-type: disc;
+    text-align: left;
+    /* Justifica el texto hacia la izquierda */
+}
+
+.icono ul li {
+    margin-bottom: 0.5rem;
+    font-size: 1.6rem;
+    text-align: left;
+    /* Justifica cada ítem de la lista hacia la izquierda */
+}
+
+.gradient {
+
+    border-image-source: linear-gradient(45deg, #f7da1d 0%, #71B100 100%);
+    border-block-start: 15px solid;
+    border-inline-start: 10px solid;
+    border-image-slice: 1;
+    padding: 15px;
+
 }
