--- a/css/styles.css
+++ b/css/styles.css
@@ -79,9 +79,9 @@ h4 {
 }
 
 .whatsapp-button img {
-    width: 80px;
+    width: 60px;
     /* Ajusta el tamaño de la imagen según lo desees */
-    height: 80px;
+    height: 60px;
     border-radius: 50%;
     /* Hace la imagen circular */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -97,6 +97,8 @@ h4 {
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
+
+
 
 
 /** Botones **/
@@ -144,13 +146,14 @@ h4 {
 }
 
 .site-header.inicio {
-    position: relative; /* Necesario para posicionar correctamente el pseudo-elemento */
+    position: relative;
+    /* Necesario para posicionar correctamente el pseudo-elemento */
     background-image: url(../img/CAMION4.webp);
     background-position: center center;
     background-size: cover;
     height: 100vh;
     min-height: 60rem;
-    overflow: hidden; 
+    overflow: hidden;
 }
 
 .site-header::before {
@@ -160,16 +163,21 @@ h4 {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: inherit; /* Reutiliza la misma imagen */
+    background-image: inherit;
+    /* Reutiliza la misma imagen */
     background-position: inherit;
     background-size: inherit;
-    filter: brightness(0.6) blur(4px); /* Aplica el desenfoque aquí */
-    z-index: 0; /* Asegúrate de que esté detrás del contenido */
+    filter: brightness(0.6) blur(4px);
+    /* Aplica el desenfoque aquí */
+    z-index: 0;
+    /* Asegúrate de que esté detrás del contenido */
 }
 
 .contenido-header {
-    position: relative; /* Asegura que el texto esté por encima del fondo */
-    z-index: 1; /* Coloca el contenido encima del pseudo-elemento */
+    position: relative;
+    /* Asegura que el texto esté por encima del fondo */
+    z-index: 1;
+    /* Coloca el contenido encima del pseudo-elemento */
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -207,7 +215,7 @@ h4 {
 /** Navegacion **/
 .navegacion a {
     color: #ffffff;
-    text-decoration:overline;
+    text-decoration: overline;
     font-size: 2.2rem;
     /* se ponene uno bajo de otro */
     display: block;
@@ -230,6 +238,10 @@ h4 {
 
 .navegacion a:hover {
     color: #71B100;
+    font-weight: bold;
+    background-color: #ffffff;
+    border-radius: 12px;
+    padding-top: 5px;
 }
 
 /** Mobile Menu **/
@@ -281,42 +293,7 @@ h4 {
 }
 
 
-/** Anuncios **/
 
-@media (min-width: 768px) {
-    .contenedor-anuncios {
-        display: flex;
-        justify-content: space-between;
-        /* el wrap se lñe palica al padre */
-        flex-wrap: wrap;
-    }
-}
-
-.anuncio {
-    border: 1px solid #B5B5B5;
-    background-color: #F5F5F5;
-    margin-bottom: 2rem;
-}
-
-@media (min-width: 768px) {
-    .anuncio {
-        flex: 0 0 calc(33.3% - 1rem);
-    }
-}
-
-.contenido-anuncio {
-    padding: 2rem;
-}
-
-.contenido-anuncio h3,
-.contenido-anuncio p {
-    margin: 0;
-}
-
-.precio {
-    color: #71B100;
-    font-weight: 700;
-}
 
 .iconos-caracteristicas {
     list-style: none;
@@ -362,7 +339,7 @@ h4 {
 }
 
 .mapa {
-    height: 30rem;
+    height: 40rem;
     background-color: red;
 }
 
@@ -430,33 +407,9 @@ h4 {
     color: #E08709;
 }
 
-/*** Testimoniales **/
-.testimonial {
-    background-color: #71B100;
-    font-size: 2.4rem;
-    padding: 2rem;
-    color: #ffffff;
-    border-radius: 2rem;
-}
 
-.testimonial p {
-    text-align: right;
-}
 
-.testimonial blockquote::before {
-    content: '';
-    background-image: url(../img/comilla.svg);
-    width: 4rem;
-    height: 4rem;
-    position: absolute;
-    left: -2rem;
-}
 
-.testimonial blockquote {
-    position: relative;
-    padding-left: 5rem;
-    font-weight: 300;
-}
 
 /** Footer **/
 .site-footer {
@@ -480,7 +433,7 @@ h4 {
     display: none;
 }
 
-@media (min-width: 768px){ 
+@media (min-width: 768px) {
     .site-footer nav {
         display: block;
     }
@@ -544,18 +497,22 @@ select {
     border: none;
     border-radius: 1rem;
 }
+
 textarea {
     position: relative;
-    z-index: 10; /* Asegúrate de que esté por encima de otros elementos */
+    z-index: 10;
+    /* Asegúrate de que esté por encima de otros elementos */
 }
 
 input[type="radio"] {
     width: auto;
     margin: 0;
 }
+
 input {
     position: relative;
-    z-index: 10; /* Asegúrate de que esté por encima de otros elementos */
+    z-index: 10;
+    /* Asegúrate de que esté por encima de otros elementos */
 }
 
 select {
@@ -576,6 +533,7 @@ textarea {
 
 .colorTitu {
     color: #71B100 !important;
+    text-shadow: 2px 2px 4px #000000;
 }
 
 .icono ul {
@@ -600,4 +558,8 @@ textarea {
     border-image-slice: 1;
     padding: 15px;
 
+}
+
+.grande {
+    font-size: 70px;
 }
